Fixed contact form to be better aligned

--- a/styles/components/ContactForm.scss
+++ b/styles/components/ContactForm.scss
@@ -3,8 +3,8 @@
     background: $thirdColor;
     padding: 0px 0px 0px 0px;
     margin: 0px 0px 0px 0px;
-    padding-left: $paddingLeft;
-    padding-right: $paddingRight;
+    padding-left: $GeneralSeparator300;
+    padding-right: $GeneralSeparator300;
     padding-bottom: $GeneralSeparator300;
     
     .ContactFormWrapper {
